# Norma-Coder

./: .gitignore  README.md  pyproject.toml  requirements.txt  开发日志.md
ai-work/: README.md  code_review_2026-07-09.md  plan.md
doc/: refactor_plan.md  开发日志.md  项目重构总体规划.md
doc/design/: architecture.md  cli_design.md  permission_hook_design.md
src/norma/: __init__.py  __main__.py  run_tests.py  smoke_real_llm.py
src/norma/agent/: functioncall_agent.py  norma_coder.py  repo_ase_agent.py  runner.py  step_agent.py  test_compact_resume.py  test_runner.py
src/norma/cli/: cli.py  test_cli.py
src/norma/core/: agent_types.py  llm_types.py  openai_llm.py  test_agent_types.py  test_openai_llm.py  tool_types.py
src/norma/hook/: __init__.py  hook.py  test_hook.py
src/norma/mcp/: __init__.py  client.py  manager.py  test_mcp_stdio.py  tool.py
src/norma/memory/: agent_memory.py  test_agent_memory.py
src/norma/messagebus/: messagebus.py  test_messagebus.py
src/norma/permission/: __init__.py  permission.py  test_permission.py
src/norma/prompt/: claude_code_system_prompt.md  system_prompt.py  test_system_prompt.py
src/norma/reminder/: __init__.py  reminder.py  task_reminder.py  test_reminder.py
src/norma/session/: __init__.py  session.py  test_session.py
src/norma/skill/: __init__.py  skill.py  test_skill.py
src/norma/tasks/: __init__.py  tasks.py  test_tasks.py
src/norma/tool/: __init__.py  test_tools.py  tool_core.py
src/norma/util/: console.py
src/taiyi/agent/: functioncall_agent.py  step_agent.py  taiyi_coder.py
src/taiyi/cli/: cli.py
(+56 files in other folders)
